basic grids, new logo

--- a/main.html
+++ b/main.html
@@ -9,14 +9,23 @@
 </head>
 <body>
     <main class="container">
-        <div class="header">
-            <img src="images/asp.png" style="width: 15%;"/>
+
+        <header class="header">
+            <img class="logo" src="images/asp_vit_t.png" style="width: 100%;"/>
+            <div class="cathegory" >
+                <p>WOMAN</p> 
+                <p>MAN</p>
+                <p>NEW IN</p>
+                <p>OUTLET</p>
+            </div>
             
+           <div></div>
+
             
-        </div>
+        </header>
 
         <div class="content">
-            content
+            content CONTENT
         </div>
 
         <div class="footer">
