grids for productpage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="images/asp_vit_t.png" style="width: 70px;" class="asp">
 
             <div class="category">
-                <a class="woman">WOMAN</a>
+                <a href="productpage2.html" class="woman">WOMAN</a>
                 <a class="man">MAN</a>
                 <a class="new-in">NEW IN</a>
                 <a class="outlet">OUTLET</a>
