img in, gridwork added a new block
cleaned up a bit in code

--- a/itempage.html
+++ b/itempage.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASP home page</title>
+    <title>item</title>
 </head>
 <body>
     <main class="container">
         <header class="header">
-            <img src="images/asp_vit_t.png" style="width: 70px;" class="asp">
+            <a href="index.html"><img src="images/asp_vit_t.png" style="width: 70px;" class="asp"></a>
             <div class="category">
                 <a href="productpage2.html" class="woman">WOMAN</a>
                 <a class="man">MAN</a>
                 <a class="new-in">NEW IN</a>
                 <a class="outlet">OUTLET</a>
-            </div> 
+            </div>
             <div class="account">
                 <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
                 ACCOUNT
@@ -24,17 +24,12 @@
             </div>
         </header>
 
-        <div class="content">
-            <div class="first_page">
-                <img class="front_pic" src="images/unsplash-background(1).jpg">
-                <div class="content_first_page">
-                    <img src="images/front_img4.jpg" style="width: 30vw;">
-                    <div class="front_text_1">AUTUMN<br>2022</div>
-                    <div class="front_text_2">KEEP IT <br>SIMPLE</div>
-                    <img class="front_img2" src="images/front_img2.jpg" style="width: 30vw;">
-                </div>
-            </div>
+
+        <div class="content_itempage">
+            product page
         </div>
+
+
         <div class="footer">
             <div class="our_company">
                 <h3>Our company</h3>
@@ -56,7 +51,6 @@
                 <div>Lantmätargränd 21, Jönköping</div>
             </div>
         </div>
-    </main>
-    
+    </main> 
 </body>
 </html>
