itempage first block, description

--- a/itempage.html
+++ b/itempage.html
@@ -8,7 +8,7 @@
     <title>item</title>
 </head>
 <body>
-    <main class="container">
+    <main class="container_3">
         <header class="header">
             <a href="index.html"><img src="images/asp_vit_t.png" style="width: 70px;" class="asp"></a>
             <div class="category">
@@ -25,10 +25,58 @@
         </header>
 
 
-        <div class="content_itempage">
-            product page
-        </div>
+            <div class="block1">
+                Woman > Clothes >Blazers > Alma Striped Blazer
+            </div>
+            <div class="block2">
+                <div class="small_items_img">
+                    <img src="images/itemimages/item1.jpg" style="width: 100px;">
+                    <img src="images/itemimages/item2.jpg" style="width: 100px;">
+                    <img src="images/itemimages/item3.jpg" style="width: 100px">
+                </div>
+                <div class="big_items_img">
+                    <img src="images/product_pic/brownjacket_girl.jpg" style="width: 350px;">
+                </div>
+                <div class="item_description">
+                    <div><span>Alma Striped Blazer</span><br>700 SEK</div>
+                    <button class="colourbox">
+                         COLOUR˅
+                    </button>
+                    <div class="size">
+                        <div class="size_guide">Size giuide</div>
+                        <div class="size_buttons">
+                            <button style="width: 2rem;">XS</button>
+                            <button style="width: 2rem;">S</button>
+                            <button style="width: 2rem;">M</button>
+                            <button style="width: 2rem;">L</button>
+                            <button style="width: 2rem;">XL</button>
+                        </div>
+                    </div>
+                    <button class="add_to_bag">
+                        ADD TO BAG
+                    </button>
+                    <div class="free_ship">
+                        <span>FREE</span> SHIPPING ON ORDERS OVER 500 SEK
+                    </div>
+                    <div class="text_description">
+                        <div class="rubrik_description">DESCRIPTION</div>
+                        <div class="description_text_massa">
+                            article nr: 2106507 <br><br>
+                            A single button closure blazer with a oversized fitting. 
+                            The fabric is dark brown with classic pinstripes, in high quality linen.
+                            It has  has flapped pockets, a classic breastpocket and a internal welt pocket. <br><br>
+                            Material 100% Linen, cetrified and tracable in every step of the production. Linning: 100% Recycled polyester <br><br>      
+                            Washing 30*, cold wash. No tumble dryer. Iron on low heat <br><br>
+                            The model is is 178cm tall and wearing a size M, with a back length of 75 cm, breast width of 108cm.
 
+                        </div>
+                       
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="block3">block3</div>
 
         <div class="footer">
             <div class="our_company">
