cleaning in code and fixed grid in topcontent
*fixed grid in the topcontent on productpage-Blazers

*breadcrumbs as standard now

*cleaned in code on all the pages EXCEPT first page (so i dont fuck up Olivers work)
*changed the classes/names to logical names and so we can continue work with those names

--- a/productpage2.html
+++ b/productpage2.html
@@ -8,7 +8,7 @@
     <title>Blazers</title>
 </head>
 <body>
-    <main class="container_2">
+    <main class="container_product_page">
         <header class="header">
             <a href="index.html"><img src="images/asp_vit_t.png" style="width: 70px;" class="asp"></a>
             <div class="category">
@@ -23,14 +23,14 @@
                 <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
             </div>
         </header>
-        
-        <div class="top_content_productpage">
-            <div class="breadcrumbs"> Woman > Clothes > Blazers </div>
-            <h3 class="woman_pp">WOMAN</h3>
-            <h1 class="blazers">BLAZERS</h1> 
+        <div class="breadcrumbs">
+            Woman > Clothes > Blazers
+        </div>
+        <div class="top_content_productpage"> 
+            <div class="woman_rubrik">WOMAN</div>
+            <h1 class="blazers_rubrik">BLAZERS</h1> 
             <button class="filter"> FILTER ˅</button>
         </div>
-        
         <div class="content_productpage">
             <div>
                 <a href="itempage.html">
@@ -125,7 +125,6 @@
                 </div>
             </div>
         </div>
-
         <div class="footer">
             <div class="our_company">
                 <h3>Our company</h3>
