--- a/index.html
+++ b/index.html
@@ -7,15 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASP home page</title>
 </head>
-<body>
+<body class="FirstPageBody">
     <main class="container">
         <header class="header">
             <img src="images/asp_vit_t.png" style="width: 70px;" class="asp">
             <div class="category">
-                <a href="productpage2.html" class="woman">WOMAN</a>
+
+                <div class="navbar">
+                <!-- <a href="productpage2.html" class="woman">WOMAN</a> -->
                 <a class="man">MAN</a>
                 <a class="new-in">NEW IN</a>
                 <a class="outlet">OUTLET</a>
+
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <WOMAN>WOMAN</WOMAN>
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                    
+                        <a>
+                            <h4>CLOTHES</h4>
+                            <p>Coats and Jackets</p>
+                            <p>T-Shirts</p>
+                            <p>Trousers</p>
+                            <p>Sweaters</p>
+                            <p>Blazers</p>
+                            <p>Basics</p>
+                            <p>Shirts & Blousers</p>
+                            
+                        </a>
+
+                        <a>
+                            <h4>SHOES</h4>
+                            <p>Coats and Jackets</p>
+                            <p>T-Shirts</p>
+                            <p>Trousers</p>
+                            <p>Sweaters</p>
+                            <p>Blazers</p>
+                            <p>Basics</p>
+                            <p>Shirts & Blousers</p>
+                        </a>
+
+                        <a>
+                            <h4>ACCESORIES</h4>
+                        </a>
+                </div>
+            </div>
+        </div>
+
+            </div>
+
             </div> 
             <div class="account">
                 <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
