--- a/itempage.html
+++ b/itempage.html
@@ -20,7 +20,7 @@
             <div class="account">
                 <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
                 ACCOUNT
-                <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
+                <a href="bagpage.html"><img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;"></a>
             </div>
         </header>
             <div class="block1_item_page">
