added card icon

--- a/checkout.html
+++ b/checkout.html
@@ -101,7 +101,7 @@
 
                     <button class="dot_button"></button>
                     <div class="delivery_rubrik">Pay with card</div>
-                    <img class="img_delivery" src="images/payments/klarna.svg">
+                    <img class="img_delivery_card" src="images/payments/card.svg">
 
                     <button class="dot_button"></button>
                     <div class="delivery_rubrik">Paypal</div>
