--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="test.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -119,7 +119,6 @@
                 </div>
 
             </div>
-
             <div class="block2_checkout">
                 <div class="conteiner_1_checkout">  <div class="bild_text"><img class="img_checkout_order" src="images/itemimages/item1.jpg">
                  <div class="text_checkout"><div class="Alma_checkout">Alma Stripped Blazer</div>
