respo nsive to mobileversion, took away header and footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container">
-        <header class="header">
+        <!-- <header class="header">
             <img src="images/asp_vit_t.png" style="width: 70px;" class="asp">
             <div class="category">
                 <a href="productpage2.html" class="woman">WOMAN</a>
@@ -22,7 +22,7 @@
                 ACCOUNT
                 <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
             </div>
-        </header>
+        </header> -->
 
         <div class="content">
             <div class="first_page">
@@ -35,6 +35,7 @@
                 </div>
             </div>
         </div>
+    </main>
         <div class="footer">
             <div class="our_company">
                 <h3>Our company</h3>
@@ -56,7 +57,7 @@
                 <div>Lantmätargränd 21, Jönköping</div>
             </div>
         </div>
-    </main>
+   
     
 </body>
 </html>
