--- a/itempage.html
+++ b/itempage.html
@@ -90,47 +90,49 @@
                         </div>
                     </div>
                     <div>
-                        <img class="product_image" src="images/stylewith/väska.jpg">
-                        <div class="product_text">
+                        <img class="product_image d31" src="images/stylewith/väska.jpg">
+                        <div class="product_text d31">
                             Frank Leather bag<br/> 650kr
                         </div>
                     </div>
                     <div>
-                        <img class="product_image" src="images/stylewith/skor(1).jpg">
-                        <div class="product_text">
+                        <img class="product_image d32" src="images/stylewith/skor(1).jpg">
+                        <div class="product_text d32">
                             Hans Leather Mules<br/> 500kr
                         </div>
                     </div>
                     <div>
-                        <img class="product_image" src="images/stylewith/skjorta.jpg">
-                        <div class="product_text">
+                        <img class="product_image d33" src="images/stylewith/skjorta.jpg">
+                        <div class="product_text d33">
                             Elsa Cotton Shirt<br/> 400kr
                         </div>
                     </div>
                 </div>
             </div>
 
-        <div class="footer">
-            <div class="our_company">
-                <h3>Our company</h3>
-                <div>About us</div>
-                <div>Suppliers</div>
-                <div>Sustainability</div>
-            </div>
-            <div class="customer_service">
-                <h3>Customer service</h3>
-                <div>frequently Asked Questions</div>
-                <div>Terms & Conditions</div>
-                <div>Delivery</div>
-                <div>Returns</div>
-            </div>
-            <div class="contacts">
-                <h3>Contact</h3>
-                <div>Email: info@ASP.contact.com</div>
-                <div>+46 70 362 00 62</div>
-                <div>Lantmätargränd 21, Jönköping</div>
-            </div>
-        </div>
+       
     </main> 
+
+    <div class="footer">
+        <div class="footer-column">
+            <h3>Our company</h3>
+            <div>About us</div>
+            <div>Suppliers</div>
+            <div>Sustainability</div>
+        </div>
+        <div class="footer-column">
+            <h3>Customer service</h3>
+            <div>frequently Asked Questions</div>
+            <div>Terms & Conditions</div>
+            <div>Delivery</div>
+            <div>Returns</div>
+        </div>
+        <div class="footer-column">
+            <h3>Contact</h3>
+            <div>Email: info@ASP.contact.com</div>
+            <div>+46 70 362 00 62</div>
+            <div>Lantmätargränd 21, Jönköping</div>
+        </div>
+    </div>
 </body>
 </html>
