--- a/productpage2.html
+++ b/productpage2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container_product_page">
-        <header class="header">
+        <!-- <header class="header">
             <a href="index.html"><img src="images/asp_vit_t.png" style="width: 70px;" class="asp"></a>
             <div class="category">
                 <a href="productpage2.html" class="woman">WOMAN</a>
@@ -22,7 +22,7 @@
                 ACCOUNT
                 <a href="bagpage.html"><img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;"></a>
             </div>
-        </header>
+        </header> -->
         <div class="breadcrumbs">
             Woman > Clothes > Blazers
         </div>
@@ -125,27 +125,29 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="our_company">
-                <h3>Our company</h3>
-                <div>About us</div>
-                <div>Suppliers</div>
-                <div>Sustainability</div>
-            </div>
-            <div class="customer_service">
-                <h3>Customer service</h3>
-                <div>frequently Asked Questions</div>
-                <div>Terms & Conditions</div>
-                <div>Delivery</div>
-                <div>Returns</div>
-            </div>
-            <div class="contacts">
-                <h3>Contact</h3>
-                <div>Email: info@ASP.contact.com</div>
-                <div>+46 70 362 00 62</div>
-                <div>Lantmätargränd 21, Jönköping</div>
-            </div>
-        </div>
+
     </main>
+
+    <div class="footer">
+        <div class="our_company">
+            <h3>Our company</h3>
+            <div>About us</div> 
+            <div>Suppliers</div>
+            <div>Sustainability</div>
+        </div>
+        <div class="customer_service">
+            <h3>Customer service</h3>
+            <div>frequently Asked Questions</div>
+            <div>Terms & Conditions</div>
+            <div>Delivery</div>
+            <div>Returns</div>
+        </div>
+        <div class="footer_text">
+            <h3>Contact</h3>
+            Email: info@ASP.contact.com <br>
+            +46 70 362 00 62 <br>
+            Lantmätargränd 21, Jönköping <br>
+        </div>
+    </div>
 </body>
 </html>
