fixed area for headermiss
made media, fixed rubriker on productpage, changed icons, linked missing links and some small fixes

--- a/bagpage.html
+++ b/bagpage.html
@@ -100,7 +100,7 @@
                     <a>T-Shirts</a>
                     <a>Trousers</a>
                     <a>Sweaters</a>
-                    <a>Blazers</a>
+                    <a href="productpage2.html">Blazers</a>
                     <a>Basics</a>
                     <a>Shirts & Blousers</a>
                     <a>Dresses</a>
@@ -140,7 +140,7 @@
 
         <div class="account">
             <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-            <img class="account-icon" src="/images/icons/profile_vit.svg" alt="ptofileicon" style="max-width: 16px;">
+            <img class="account-icon" src="/images/icons/profile icon5.svg" alt="ptofileicon" style="max-width: 16px;">
             <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
         </div>
     </header>
