--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <div class="account">
             <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-            <img class="account-icon" src="/images/icons/profile_vit.svg" alt="ptofileicon" style="max-width: 16px;">
+            <img class="account-icon" src="/images/icons/profile icon5.svg" alt="ptofileicon" style="max-width: 16px;">
             <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
         </div>
     </header>
@@ -149,20 +149,7 @@
 
 
     <main class="container">
-        <!-- <header class="header">
-            <img src="images/asp_vit_t.png" style="width: 70px;" class="asp">
-            <div class="category">
-                <a href="productpage2.html" class="woman">WOMAN</a>
-                <a class="man">MAN</a>
-                <a class="new-in">NEW IN</a>
-                <a class="outlet">OUTLET</a>
-            </div> 
-            <div class="account">
-                <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-                ACCOUNT
-                <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
-            </div>
-        </header> -->
+
         <div class="content">
             <div class="first_page">
                 <img class="front_pic" src="images/FrontPagePicture.jpg">
