--- a/itempage.html
+++ b/itempage.html
@@ -43,7 +43,7 @@
                         <a>T-Shirts</a>
                         <a>Trousers</a>
                         <a>Sweaters</a>
-                        <a>Blazers</a>
+                        <a href="productpage2.html">Blazers</a>
                         <a>Basics</a>
                         <a>Shirts & Blousers</a>
                         <a>Dresses</a>
@@ -140,7 +140,7 @@
 
         <div class="account">
             <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-            <img class="account-icon" src="/images/icons/profile_vit.svg" alt="ptofileicon" style="max-width: 16px;">
+            <img class="account-icon" src="/images/icons/profile icon5.svg" alt="ptofileicon" style="max-width: 16px;">
             <a id="bag" href="bagpage.html"><img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;"></a>
             <a id="bagWith1" class="invisible" href="bagpage.html"><img class="bag_icon" src="images/icons/bag_with_1.svg" style="width: 1.5rem;"></a>
         </div>
