--- a/productpage2.html
+++ b/productpage2.html
@@ -139,24 +139,12 @@
 
         <div class="account">
             <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-            <img class="account-icon" src="/images/icons/profile_vit.svg" alt="ptofileicon" style="max-width: 16px;">
+            <img class="account-icon" src="/images/icons/profile icon5.svg" alt="ptofileicon" style="max-width: 16px;">
             <img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;">
         </div>
     </header>
     <main class="container_product_page">
-            <a href="index.html"><img src="images/asp_vit_t.png" style="width: 70px;" class="asp"></a>
-            <div class="category">
-                <a href="productpage2.html" class="woman">WOMAN</a>
-                <a class="man">MAN</a>
-                <a class="new-in">NEW IN</a>
-                <a class="outlet">OUTLET</a>
-            </div>
-            <div class="account">
-                <img class="search_icon" src="images/icons/search_whiter.svg" style="width: 1rem;">
-                ACCOUNT
-                <a href="bagpage.html"><img class="bag_icon" src="images/icons/bag_whiter.svg" style="width: 1rem;"></a>
-            </div>
-        </header> -->
+
         <div class="breadcrumbs">
             Woman > Clothes > Blazers
         </div>
@@ -171,91 +159,91 @@
                     <img class="product_image" src="images/product_pic/brownjacket_girl.jpg">
                 </a>
                 <div class="product_text">
-                    Alma Striped Blazer <br/> 700kr
+                    <span>Alma Striped Blazer</span> <br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer2.jpg">
                 <div class="product_text">
-                    Eva Blazer<br/> 500kr
+                    <span>Eva Blazer</span><br/> 500kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer3.jpg">
                 <div class="product_text">
-                    Ester double button Blazer<br/> 700kr
+                    <span>Ester double button Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer4.jpg">
                 <div class="product_text">
-                    Alma double button Striped Blazer<br/> 700kr
+                    <span>Alma double button Striped Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer5.jpg">
                 <div class="product_text">
-                    Dagmar one button Blazer<br/> 500kr
+                    <span>Dagmar one button Blazer</span><br/> 500kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer6.jpg">
                 <div class="product_text">
-                    Siv Linen Blazer<br/> 700kr
+                    <span>Siv Linen Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer7.jpg">
                 <div class="product_text">
-                    Marianne Blazer<br/> 600kr
+                    <span>Marianne Blazer</span><br/> 600kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer8.jpg">
                 <div class="product_text">
-                    Signe Linen Striped Blazer<br/> 700kr
+                    <span>Signe Linen Striped Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer9.jpg">
                 <div class="product_text">
-                    Alma Striped Black Blazer<br/> 700kr
+                    <span>Alma Striped Black Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer10.jpg">
                 <div class="product_text">
-                    Berit Blazer<br/> 500kr
+                    <span>Berit Blazer</span><br/> 500kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer11.jpg">
                 <div class="product_text">
-                    Sigrid Blazer<br/> 600kr
+                    <span>Sigrid Blazer</span><br/> 600kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer12.jpg">
                 <div class="product_text">
-                    Astrid double dutton Blazer<br/> 500kr
+                    <span>Astrid double dutton Blazer</span><br/> 500kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer13.jpg">
                 <div class="product_text">
-                    Ruth double button Blazer<br/> 700kr
+                    <span>Ruth double button Blazer</span><br/> 700kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer14.jpg">
                 <div class="product_text">
-                    Ingeborg Blazer<br/> 500kr
+                    <span>Ingeborg Blazer</span><br/> 500kr
                 </div>
             </div>
             <div>
                 <img class="product_image" src="images/products/blazer15.jpg">
                 <div class="product_text">
-                    Kajsa Blazer<br/> 500kr
+                    <span>Kajsa Blazer</span><br/> 500kr
                 </div>
             </div>
         </div>
